--- a/Rezept_nasi-goreng.html
+++ b/Rezept_nasi-goreng.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kochwelt</title>
+    <link rel="icon" href="./img/logo_small.png">
     <link rel="stylesheet" href="./style.css" /> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="site-header">
         <div class="container header-inner">
              <a class="brand" href="#">
-                <span class="web-logo"><img src="./logo.png" alt="Logo"></span>
+                <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
             </a>
 
             <nav class="nav">
@@ -23,8 +27,8 @@
     </header>
     <main class="container page">
         <h1 class="page-title">Nasi Goreng</h1>
-        <section class="img"> 
-            <!--FEHLT-->
+        <section class="nasgor"> 
+            <img class="nasgor-img" src="./nasgor.jpg" alt="Nasi Goreng">
 
         </section>
         <section class="meta">
