--- a/Rezept_nasi-goreng.html
+++ b/Rezept_nasi-goreng.html
@@ -27,8 +27,8 @@
     </header>
     <main class="container page">
         <h1 class="page-title">Nasi Goreng</h1>
-        <section class="nasgor"> 
-            <img class="nasgor-img" src="./nasgor.jpg" alt="Nasi Goreng">
+        <section class="food"> 
+            <img class="food-img" src="./nasgor.jpg" alt="Nasi Goreng">
 
         </section>
         <section class="meta">
@@ -48,7 +48,7 @@
         </section>
         <section class="prep">
             <h2 class="section-title">Zubereitung</h2>
-                <div class="chip chip--soft">
+                <div class="chip">
                     <span class="chip-icon"><img src="./img/icons/clock-regular.svg" alt="Zeit"></span><span>ca. 30 Minuten</span>
                 </div>
             <p class="prep-text">
@@ -74,17 +74,16 @@
         <section class="author">
             <h3 class="author-title">Rezept erstellt von</h3>
             <div class="author-card">
-                    <div class="avatar"></div>
+                    <div class="avatar"><img src="./img/avatar.jpg" alt="avatar"> </div>
                     <div class="author-name">Odilo M.</div>
             </div>
         </section>
     </main>
     <footer class="site-footer">
         <div class="container footer-inner">
-            <div class="footer-logo"> <img src="./img/logo.png" alt="Logo"></div>
-        </div>
-
-        <div class="social">
+            <a class="footer-logo" href="#"> <img src="./img/logo.png" alt="Logo"></a>
+   
+            <div class="container social">
             <a class="social-btn fb" href="#">
                 <span class="social-icon"><img src="./fb.png" alt="facebook"></span>
             </a>
@@ -96,6 +95,7 @@
             <a class="social-btn tw" href="#">
                 <span class="social-icon"><img src="./twitter.png" alt="twitter"></span>
             </a>  
+          </div>
         </div>
     </footer>
     <script src="./script.js"></script>
