--- a/Rezept_nasi-goreng.html
+++ b/Rezept_nasi-goreng.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kochwelt</title>
     <link rel="icon" href="./img/logo_small.png">
-    <link rel="stylesheet" href="./style.css" /> 
+    <link rel="stylesheet" href="./style-Odilo.css" /> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -98,6 +98,6 @@
           </div>
         </div>
     </footer>
-    <script src="./script.js"></script>
+    <script src="./script-Odilo.js"></script>
 </body>
 </html>
