--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="menue">
-        <a href="index.html#Start">Start</a>
+        <a href="Rezept Fabian.html#Start">Start</a>
         <a href="index.html#Rezept-des-Tages">Rezept des Tages</a>
         <a href="index.html#Kontakt">Kontakt</a>
         <a href="impressum.html">Impressum</a>
@@ -88,11 +88,11 @@
       </p>
     </div>
 
-    <footer class="footer">
+     <footer class="footer">
       <img class="footer-logo" src="./img/logo.png" alt="Kochwelt Logo" />
 
       <div class="datenschutz">
-        <a href="datenschutz.html">Datenschutz</a>
+        <a href="Datenschutz.html">Datenschutz</a>
       </div>
 
       <div class="social-media">
