--- a/Rezept Fabian.html
+++ b/Rezept Fabian.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  
+
   <body>
     <div class="header">
       <div>
@@ -129,7 +129,7 @@
       <img class="footer-logo" src="./img/logo.png" alt="Kochwelt Logo" />
 
       <div class="datenschutz">
-        <a href="#Datenschutz">Datenschutz</a>
+        <a href="Datenschutz.html">Datenschutz</a>
       </div>
 
       <div class="social-media">
