--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="menue">
-        <a href="Rezept Fabian.html#Start">Start</a>
+        <a href="index.html#Start">Start</a>
         <a href="index.html#Rezept-des-Tages">Rezept des Tages</a>
         <a href="index.html#Kontakt">Kontakt</a>
         <a href="impressum.html">Impressum</a>
