Verlinkungen im Header überarbeitet

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@ padding-bottom: 50px;
   <img class="kochwelt" src="./img/logo.png">
   <nav class="menu">
     <a href="#start">Start</a>
-    <a href="#rezept">Rezept des Tages</a>
+    <a href="Rezept Fabian.html">Rezept des Tages</a>
     <a href="#kontakt">Kontakt</a>
-    <a href="#impressum">Impressum</a>
+    <a href="impressum.html">Impressum</a>
   </nav>
 </header>
 
