--- a/kaesespaetzle.html
+++ b/kaesespaetzle.html
@@ -5,225 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schnelle Käsespätzle</title>
 
-    <style>
+    <link rel="stylesheet" href="Style-Thomas.css" />
 
-.header {
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0px 50px 0px 50px;
-  border-bottom: 2px solid #ccc; 
-  box-shadow: 0 2px 10px 0 rgb (0 0 0);
-  background-color: white;
-}
-
-
-
-.menu {
-      position: absolute;
-      right: 50px;
-      display: flex;
-      gap: 10px;
-        justify-content: flex-end;
-      align-items: center;
-      font-family: "Raleway", sans-serif;
-      font-weight: normal;
-      font-size: 18px;
-      padding: 2px 14px 2px 8px;
-    }
-
-    .menu a {
-  position: relative;
-  color: black;
-  text-decoration: none;
-  font-weight: 600;
-  padding: 18px 10px; /* Abstand zur Linie */
-}
-
-.menu a::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0px;           /* knapp unter dem Text */
-  width: 100%;
-  height: 2px;
-  background-color: transparent;
-
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  
-}
-
-    .menu a:hover {
-  color: rgb(0,128,0);
-}
-
-.menu a:hover::after {
-  background-color: rgb(0,128,0);
-  bottom: -4px;
-  size: 8px;
-}
-
-    .kochwelt {
-      width: 180px;
-      height: 60px;
-      position: absolute;
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-start;
-    }
-
- h1 {
-      font-family: 'Raleway', sans-serif;
-      font-weight: 600;
-      font-size: 28px;
-      display: flex;
-      justify-content: flex-start;
-      margin: 30px 50px 15px 50px;
-    }
-
-    h2 {
-      font-family: 'Raleway', sans-serif;
-      font-weight: 700;
-      font-size: 20px;
-      margin-top: 20px;
-      margin-left: 50px;
-    }
-
-h3 {
-      font-family: 'Raleway', sans-serif;
-      font-weight: 400;
-      font-size: 18px;
-    }
-
-    ul, ol {
-      font-family: 'Raleway', sans-serif;
-      font-weight: 300;
-      font-size: 18px;
-    }
-
-.aot-image {
-    width: 90%;
-  height: 200px;
-  object-fit: cover; /* verhindert Verzerrung */
-  display: block;
-  border-radius: 20px;
-  margin: 25px 50px 25px 50px;
-}
-
-.icon-bar {
-  display: flex;
-  gap: 20px;
-  margin: 10px 50px;
-}
-
-.icon-box {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  background-color: #eee;
-  padding: 5px 10px;
-  border-radius: 10px;
-  font-family: 'Raleway', sans-serif;
-      font-weight: 300;
-      font-size: 18px;
-}
-
-.icon {
-  width: 15px;
-  height: auto;
-}
-
-.icon-box p {
-  margin: 0;
-}
-
-.Zutaten {
-  display: flex;
-  flex-direction: column;
-  text-indent: 15px;
-}
-
-.portionen-rechner {
-  display: flex;
-  align-items: center;      /* gleiche Höhe */               
-  font-family: 'Raleway';
-  margin: 30px 50px 0px 50px;
-  padding-top: 8px;
-  border-top: 1px solid #eee; 
-  
-}
-
-.portionen-rechner h3 {
-  margin-right: 10px;               /* wichtig! sonst springt die Höhe */
-  font-size: 16px;
-  font-weight: 300;
-}
-
-.portionen-rechner input {
-  width: 50px;
-  padding: 4px;
-  text-align: center;
-      height: 24px;
-      border-top-left-radius: 4px;
-      border-bottom-left-radius: 4px;
-      border: 1px solid #eee; 
-}
-
-.portionen-rechner label {
-  white-space: nowrap;      /* verhindert Umbruch */
-}
-
-.button {
-  background-color: rgb(0, 128, 0);;
-  border: none;
-  color: white;
-  padding: 8px 16px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-#zutaten {
-  list-style: none; 
-}
-
-li {
-    padding: 6px 6px 6px 10px;
-    border-radius: 4px;
-}
-
-.Zubereitung{
-  margin: 5px 50px 0px 40px;
-}
-
-.Rezept{
-  margin: 30px 0 5px 50px;
-  font-family: 'Raleway', sans-serif;
-      font-weight: 600;
-      font-size: 18px;
-}
-
-.ersteller{
-  display: flex;
-  text-align: center;
-  justify-content: flex-start;
-  margin: 15px 0 80px 50px;
-}
-
-.ersteller img{
-    height: 60px;
-    width: auto;
-    border-radius: 360px;
-}
-
-.ersteller h3{
-  margin-left: 15px;
-}
-
-    </style>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -237,9 +20,9 @@ li {
   <img class="kochwelt" src="./img/logo.png">
   <nav class="menu">
     <a href="#start">Start</a>
-    <a href="#rezept">Rezept des Tages</a>
+    <a href="index.html">Rezept des Tages</a>
     <a href="#kontakt">Kontakt</a>
-    <a href="#impressum">Impressum</a>
+    <a href="impressum.html">Impressum</a>
   </nav>
 </header>
 
@@ -316,6 +99,40 @@ li {
     <img src="./img/ersteller.jpg" alt="Ersteller"> 
    <h3>Thomas</h3>
 </div>
+
+<footer class="footer">
+      <img class="footer-logo" src="./img/logo.png" alt="Kochwelt Logo" />
+
+      <div class="datenschutz">
+        <a href="#Datenschutz">Datenschutz</a>
+      </div>
+
+      <div class="social-media">
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            class="social-media-icon"
+            src="./instagram_logo.png"
+            alt="Instagram"
+          />
+        </a>
+
+        <a
+          href="https://de-de.facebook.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            class="social-media-icon"
+            src="./facebook_logo.png"
+            alt="Facebook"
+          />
+        </a>
+      </div>
+    </footer>
 
   <script>
   const portionenInput = document.getElementById("portionen");
