Datenschutz findet man nurnoch bei Impressum

--- a/impressum.html
+++ b/impressum.html
@@ -43,13 +43,65 @@
       E-Mail: Fabianvoneitzen@outlook.com <br />
       Quelle: <a href="https://www.e-recht24.de">e-recht24.de</a>
     </div>
+     <h1>Datenschutzerklärung</h1>
+
+    <div class="impressum-text">
+      <h2>1. Datenschutz auf einen Blick</h2>
+      <p>
+        Der Schutz Ihrer persönlichen Daten ist uns ein besonderes Anliegen.
+        Personenbezogene Daten werden auf dieser Website nur im notwendigen
+        Umfang verarbeitet.
+      </p>
+
+      <h2>2. Verantwortlicher</h2>
+      <p>
+        Fabian von Eitzen<br />
+        Finkenweg 20<br />
+        24326 Ascheberg<br />
+        E-Mail: Fabianvoneitzen@outlook.com
+      </p>
+
+      <h2>3. Erhebung und Speicherung personenbezogener Daten</h2>
+      <p>
+        Beim Besuch dieser Website werden automatisch Informationen durch den
+        Browser an den Server übermittelt. Diese Informationen werden temporär
+        in sogenannten Logfiles gespeichert.
+      </p>
+
+      <h2>4. Cookies</h2>
+      <p>
+        Diese Website verwendet keine Cookies zur Analyse des Nutzerverhaltens.
+      </p>
+
+      <h2>5. Externe Links</h2>
+      <p>
+        Diese Website enthält Links zu externen Websites (z. B. Instagram oder
+        Facebook). Für die Inhalte externer Seiten übernehmen wir keine Haftung.
+      </p>
+
+      <h2>6. Ihre Rechte</h2>
+      <p>
+        Sie haben jederzeit das Recht auf Auskunft über Ihre gespeicherten
+        personenbezogenen Daten sowie ein Recht auf Berichtigung oder Löschung
+        dieser Daten.
+      </p>
+
+      <h2>7. Quelle</h2>
+      <p>
+        Teile dieser Datenschutzerklärung wurden erstellt mit Hilfe von
+        <a
+          href="https://www.e-recht24.de"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          e-recht24.de
+        </a>
+      </p>
+    </div>
     <footer class="footer">
       <img class="footer-logo" src="./img/logo.png" alt="Kochwelt Logo" />
 
-      <div class="datenschutz">
-        <a href="Datenschutz.html">Datenschutz</a>
-      </div>
-
+    
       <div class="social-media">
         <a
           href="https://www.instagram.com/"
