--- a/impressum.html
+++ b/impressum.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-
+ 
   <body>
     <div class="header">
       <div>
@@ -98,35 +98,24 @@
         </a>
       </p>
     </div>
-    <footer class="footer">
-      <img class="footer-logo" src="./img/logo.png" alt="Kochwelt Logo" />
+   <footer class="site-footer">
+        <div class="container footer-inner">
+            <a class="footer-logo" href="#"> <img src="./img/logo.png" alt="Logo"></a>
+   
+            <div class="container social">
+            <a class="social-btn fb" href="#">
+                <span class="social-icon"><img src="./fb.png" alt="facebook"></span>
+            </a>
+            
+            <a class="social-btn ig" href="#">
+                <span class="social-icon"><img src="./ig.png" alt="instagram"></span>
+            </a>
 
-    
-      <div class="social-media">
-        <a
-          href="https://www.instagram.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            class="social-media-icon"
-            src="./instagram_logo.png"
-            alt="Instagram"
-          />
-        </a>
-
-        <a
-          href="https://de-de.facebook.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            class="social-media-icon"
-            src="./facebook_logo.png"
-            alt="Facebook"
-          />
-        </a>
-      </div>
+            <a class="social-btn tw" href="#">
+                <span class="social-icon"><img src="./twitter.png" alt="twitter"></span>
+            </a>  
+          </div>
+        </div>
     </footer>
   </body>
 </html>
