--- a/impressum.html
+++ b/impressum.html
@@ -30,6 +30,7 @@
         <a href="impressum.html">Impressum</a>
       </div>
     </div>
+  <main class="container">
     <h1>Impressum</h1>
 
     <div class="impressum-text">
@@ -98,7 +99,8 @@
         </a>
       </p>
     </div>
-   <footer class="site-footer">
+  </main>
+    <footer class="site-footer">
         <div class="container footer-inner">
             <a class="footer-logo" href="#"> <img src="./img/logo.png" alt="Logo"></a>
    
