--- a/Rezept_nasi-goreng.html
+++ b/Rezept_nasi-goreng.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kochwelt</title>
+    <title>Kochwelt - Nasi Goreng</title>
     <link rel="icon" href="./img/logo_small.png">
     <link rel="stylesheet" href="./style-Odilo.css" /> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
