Impressum layout changed

--- a/impressum.html
+++ b/impressum.html
@@ -16,7 +16,35 @@
   </head>
  
   <body>
-    <div class="header">
+    <header class="site-header">
+        <div class="container header-inner">
+             <a class="brand" href="#">
+                <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
+            </a>
+
+            <button class="nav-toggle" id="navToggle" type="button">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <nav class="nav nav-desktop">
+                <a class="nav-link" href="#">Start</a>
+                <a class="nav-link" href="#">Rezept des Tages</a>
+                <a class="nav-link" href="#">Kontakt</a>
+                <a class="nav-link is-active" href="./impressum.html">Impressum</a>
+            </nav>
+        </div>
+        <div class="nav-overlay" id="navOverlay" hidden></div>
+
+        <nav class="nav-drawer" id="mobileMenu" hidden>
+            <a class="nav-link" href="#">Start</a>
+            <a class="nav-link" href="#">Rezept des Tages</a>
+            <a class="nav-link" href="#">Kontakt</a>
+            <a class="nav-link is-active" href="./impressum.html">Impressum</a>
+        </nav>
+    </header>
+    <!-- <div class="header">
       <div>
         <a href="index.html">
           <img src="./img/logo.png" alt="Kochwelt Überschrift" />
@@ -29,7 +57,7 @@
         <a href="index.html#Kontakt">Kontakt</a>
         <a href="impressum.html">Impressum</a>
       </div>
-    </div>
+    </div> -->
   <main class="container">
     <h1>Impressum</h1>
 
@@ -119,5 +147,6 @@
           </div>
         </div>
     </footer>
+    <script src="./script-Odilo.js"></script>
   </body>
 </html>
