--- a/Rezept Fabian.html
+++ b/Rezept Fabian.html
@@ -16,20 +16,34 @@
   </head>
  
   <body>
-    <div class="header">
-      <div>
-        <a href="index.html">
-          <img src="./img/logo.png" alt="Kochwelt Überschrift" />
-        </a>
-      </div>
+    <header class="site-header">
+        <div class="container header-inner">
+             <a class="brand" href="#">
+                <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
+            </a>
 
-      <div class="menue">
-        <a href="index.html#Start">Start</a>
-        <a href="index.html#Rezept-des-Tages">Rezept des Tages</a>
-        <a href="index.html#Kontakt">Kontakt</a>
-        <a href="impressum.html">Impressum</a>
-      </div>
-    </div>
+            <button class="nav-toggle" id="navToggle" type="button">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <nav class="nav nav-desktop">
+                <a class="nav-link" href="#">Start</a>
+                <a class="nav-link" href="#">Rezept des Tages</a>
+                <a class="nav-link" href="#">Kontakt</a>
+                <a class="nav-link is-active" href="./impressum.html">Impressum</a>
+            </nav>
+        </div>
+        <div class="nav-overlay" id="navOverlay" hidden></div>
+
+        <nav class="nav-drawer" id="mobileMenu" hidden>
+            <a class="nav-link" href="#">Start</a>
+            <a class="nav-link" href="#">Rezept des Tages</a>
+            <a class="nav-link" href="#">Kontakt</a>
+            <a class="nav-link is-active" href="./impressum.html">Impressum</a>
+        </nav>
+    </header>
     <h1>Teriyaki Chicken Wings</h1>
 
     <div class="headpic">
