--- a/Rezept Fabian.html
+++ b/Rezept Fabian.html
@@ -139,36 +139,24 @@
       <img class="creator-pic" src="./Profilepicturefabian.jpeg" alt="" />
       Fabian
     </div>
-    <footer class="footer">
-      <img class="footer-logo" src="./img/logo.png" alt="Kochwelt Logo" />
+    <footer class="site-footer">
+        <div class="container footer-inner">
+            <a class="footer-logo" href="#"> <img src="./img/logo.png" alt="Logo"></a>
+   
+            <div class="container social">
+            <a class="social-btn fb" href="#">
+                <span class="social-icon"><img src="./fb.png" alt="facebook"></span>
+            </a>
+            
+            <a class="social-btn ig" href="#">
+                <span class="social-icon"><img src="./ig.png" alt="instagram"></span>
+            </a>
 
-     
-
-      <div class="social-media">
-        <a
-          href="https://www.instagram.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            class="social-media-icon"
-            src="./instagram_logo.png"
-            alt="Instagram"
-          />
-        </a>
-
-        <a
-          href="https://de-de.facebook.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            class="social-media-icon"
-            src="./facebook_logo.png"
-            alt="Facebook"
-          />
-        </a>
-      </div>
+            <a class="social-btn tw" href="#">
+                <span class="social-icon"><img src="./twitter.png" alt="twitter"></span>
+            </a>  
+          </div>
+        </div>
     </footer>
     <script src="Script-Fabian.js"></script>
   </body>
