Impressum footer img fixed; btn link connected; title changed

--- a/impressum.html
+++ b/impressum.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kochwelt</title>
+    <title>Impressum</title>
     <link rel="stylesheet" href="Style-Fabian.css" />
 
     <link rel="icon" href="./img/logo_small.png" />
@@ -18,7 +18,7 @@
   <body>
     <header class="site-header">
         <div class="container header-inner">
-             <a class="brand" href="#">
+             <a class="brand" href="./index.html">
                 <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
             </a>
 
@@ -29,18 +29,18 @@
             </button>
 
             <nav class="nav nav-desktop">
-                <a class="nav-link" href="#">Start</a>
-                <a class="nav-link" href="#">Rezept des Tages</a>
-                <a class="nav-link" href="#">Kontakt</a>
+                <a class="nav-link" href="./index.html">Start</a>
+                <a class="nav-link" href="./index.html">Rezept des Tages</a>
+                <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
                 <a class="nav-link is-active" href="./impressum.html">Impressum</a>
             </nav>
         </div>
         <div class="nav-overlay" id="navOverlay" hidden></div>
 
         <nav class="nav-drawer" id="mobileMenu" hidden>
-            <a class="nav-link" href="#">Start</a>
-            <a class="nav-link" href="#">Rezept des Tages</a>
-            <a class="nav-link" href="#">Kontakt</a>
+            <a class="nav-link" href="./index.html">Start</a>
+            <a class="nav-link" href="./index.html">Rezept des Tages</a>
+            <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
             <a class="nav-link is-active" href="./impressum.html">Impressum</a>
         </nav>
     </header>
@@ -130,7 +130,7 @@
   </main>
     <footer class="site-footer">
         <div class="container footer-inner">
-            <a class="footer-logo" href="#"> <img src="./img/logo.png" alt="Logo"></a>
+            <a class="footer-logo" href="./index.html"> <img src="./img/logo.png" alt="Logo"></a>
    
             <div class="container social">
             <a class="social-btn fb" href="#">
