feat: connect link

--- a/Apfelstrudel.html
+++ b/Apfelstrudel.html
@@ -150,14 +150,14 @@
     </a>
 
     <div class="social">
-      <a class="social-btn fb" href="#"><img src="./img/fb.png" alt=""></a>
-      <a class="social-btn ig" href="#"><img src="./img/ig.png" alt=""></a>
-      <a class="social-btn tw" href="#"><img src="./img/twitter.png" alt=""></a>
+      <a class="social-btn fb" href="https://www.facebook.com/"><img src="./img/fb.png" alt=""></a>
+      <a class="social-btn ig" href="https://www.instagram.com/"><img src="./img/ig.png" alt=""></a>
+      <a class="social-btn tw" href="https://x.com/"><img src="./img/twitter.png" alt=""></a>
     </div>
 
   </div>
 </footer>
-     <script src="Script-Felix.js"></script>
+     <script src="./Script-Fellix.js"></script>
 </body>
 
 </html>
