--- a/Kontakt Formular.html
+++ b/Kontakt Formular.html
@@ -168,7 +168,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -187,9 +187,9 @@
             </div>
 
             <div class="menue">
-                <a href="index.html#Start">Start</a>
-                <a href="index.html#Rezept-des-Tages">Rezept des Tages</a>
-                <a href="index.html#Kontakt">Kontakt</a>
+                <a href="index.html">Start</a>
+                <a href="index.html">Rezept des Tages</a>
+                <a href="Kontakt Formular.html">Kontakt</a>
                 <a href="impressum.html">Impressum</a>
             </div>
         </div>
@@ -216,23 +216,22 @@
     </header>
     <footer class="site-footer">
         <div class="container footer-inner">
-            <a class="footer-logo" href="#"> <img src="./img/logo.png" alt="Logo"></a>
-
+            <a class="footer-logo" href="./index.html"> <img src="./img/logo.png" alt="Logo"></a>
+   
             <div class="container social">
-                <a class="social-btn fb" href="#">
-                    <span class="social-icon"><img src="./img/fb.png" alt="facebook"></span>
-                </a>
+            <a class="social-btn fb" href="https://www.facebook.com/">
+                <span class="social-icon"><img src="./fb.png" alt="facebook"></span>
+            </a>
+            
+            <a class="social-btn ig" href="https://www.instagram.com/">
+                <span class="social-icon"><img src="./ig.png" alt="instagram"></span>
+            </a>
 
-                <a class="social-btn ig" href="#">
-                    <span class="social-icon"><img src="./img/ig.png" alt="instagram"></span>
-                </a>
-
-                <a class="social-btn tw" href="#">
-                    <span class="social-icon"><img src="./img/twitter.png" alt="twitter"></span>
-                </a>
-            </div>
+            <a class="social-btn tw" href="https://x.com/">
+                <span class="social-icon"><img src="./twitter.png" alt="twitter"></span>
+            </a>  
+          </div>
         </div>
     </footer>
-</body>
-
+  </body>
 </html>
