--- a/Rezept Fabian.html
+++ b/Rezept Fabian.html
@@ -18,7 +18,7 @@
   <body>
     <header class="site-header">
         <div class="container header-inner">
-             <a class="brand" href="#">
+             <a class="brand" href="./index.html">
                 <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
             </a>
 
@@ -29,18 +29,18 @@
             </button>
 
             <nav class="nav nav-desktop">
-                <a class="nav-link" href="#">Start</a>
+                <a class="nav-link" href="./index.html">Start</a>
                 <a class="nav-link is-active" href="#">Rezept des Tages</a>
-                <a class="nav-link" href="#">Kontakt</a>
+                <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
                 <a class="nav-link" href="./impressum.html">Impressum</a>
             </nav>
         </div>
         <div class="nav-overlay" id="navOverlay" hidden></div>
 
         <nav class="nav-drawer" id="mobileMenu" hidden>
-            <a class="nav-link" href="#">Start</a>
+            <a class="nav-link" href="./index.html">Start</a>
             <a class="nav-link is-active" href="#">Rezept des Tages</a>
-            <a class="nav-link" href="#">Kontakt</a>
+            <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
             <a class="nav-link" href="./impressum.html">Impressum</a>
         </nav>
     </header>
@@ -164,18 +164,18 @@
     </main>
     <footer class="site-footer">
         <div class="container footer-inner">
-            <a class="footer-logo" href="#"> <img src="./img/logo.png" alt="Logo"></a>
+            <a class="footer-logo" href="./index.html"> <img src="./img/logo.png" alt="Logo"></a>
    
             <div class="container social">
-            <a class="social-btn fb" href="#">
+            <a class="social-btn fb" href="https://www.facebook.com/">
                 <span class="social-icon"><img src="./fb.png" alt="facebook"></span>
             </a>
             
-            <a class="social-btn ig" href="#">
+            <a class="social-btn ig" href="https://www.instagram.com/">
                 <span class="social-icon"><img src="./ig.png" alt="instagram"></span>
             </a>
 
-            <a class="social-btn tw" href="#">
+            <a class="social-btn tw" href="https://x.com/">
                 <span class="social-icon"><img src="./twitter.png" alt="twitter"></span>
             </a>  
           </div>
