--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rezept des Tages</title>
+    <title>Kochwelt</title>
 
      <link rel="stylesheet" href="Style-mockup.css" />
 
@@ -19,9 +19,9 @@
     <header class="header">
   <img class="kochwelt" src="./img/logo.png">
   <nav class="menu">
-    <a href="#start">Start</a>
+    <a href="#">Start</a>
     <a href="index.html">Rezept des Tages</a>
-    <a href="#kontakt">Kontakt</a>
+    <a href="./Kontakt Formular.html">Kontakt</a>
     <a href="impressum.html">Impressum</a>
   </nav>
 </header>
@@ -43,14 +43,14 @@
   <div class="rezepte-grid">
     <div class="rezept">
       <a href="./Rezept Fabian.html">
-        <img src="./img/Headpic.jpeg" alt="Chicken Wings">
+        <img src="./Headpic.jpeg" alt="Chicken Wings">
       </a>
       <p>Chicken Wings</p>
     </div>
 
     <div class="rezept">
       <a href="./Rezept_nasi-goreng.html">
-        <img src="./img/nasgor.jpg" alt="Nasi Goreng">
+        <img src="./nasgor.jpg" alt="Nasi Goreng">
       </a>
       <p>Nasi Goreng</p>
     </div>
@@ -59,7 +59,7 @@
       <a href="./kaesespaetzle.html">
         <img src="./img/nudeln.jpg" alt="">
       </a>
-      <p>Hier Text</p>
+      <p>Käse Spätzle</p>
     </div>
   </div>
 </div>
