--- a/kaesespaetzle.html
+++ b/kaesespaetzle.html
@@ -19,9 +19,9 @@
 <header class="header">
   <img class="kochwelt" src="./img/logo.png">
   <nav class="menu">
-    <a href="#start">Start</a>
+    <a href="index.html">Start</a>
     <a href="index.html">Rezept des Tages</a>
-    <a href="#kontakt">Kontakt</a>
+    <a href="Kontakt Formular.html">Kontakt</a>
     <a href="impressum.html">Impressum</a>
   </nav>
 </header>
