--- a/impressum.html
+++ b/impressum.html
@@ -133,15 +133,15 @@
             <a class="footer-logo" href="./index.html"> <img src="./img/logo.png" alt="Logo"></a>
    
             <div class="container social">
-            <a class="social-btn fb" href="#">
+            <a class="social-btn fb" href="https://www.facebook.com/">
                 <span class="social-icon"><img src="./fb.png" alt="facebook"></span>
             </a>
             
-            <a class="social-btn ig" href="#">
+            <a class="social-btn ig" href="https://www.instagram.com/">
                 <span class="social-icon"><img src="./ig.png" alt="instagram"></span>
             </a>
 
-            <a class="social-btn tw" href="#">
+            <a class="social-btn tw" href="https://x.com/">
                 <span class="social-icon"><img src="./twitter.png" alt="twitter"></span>
             </a>  
           </div>
