fix:felix recipe index.html added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
     </div>
 
     <div class="rezept">
+      <a href="Apfelstrudel.html">
+        <img src="" alt="Apfelstrudel">
+      </a>
+      <p>Apfelstrudel</p>
+    </div>
+
+    <div class="rezept">
       <a href="./kaesespaetzle.html">
         <img src="./img/nudeln.jpg" alt="">
       </a>
