--- a/Apfelstrudel.html
+++ b/Apfelstrudel.html
@@ -26,9 +26,9 @@
       </div>
 
       <div class="menue">
-        <a href="index.html#Start">Start</a>
-        <a href="index.html#Rezept-des-Tages">Rezept des Tages</a>
-        <a href="index.html#Kontakt">Kontakt</a>
+        <a href="index.html">Start</a>
+        <a href="index.html">Rezept des Tages</a>
+        <a href="Kontakt Formular.html">Kontakt</a>
         <a href="impressum.html">Impressum</a>
       </div>
     </div>
